# NBA-Scout

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_initial_schema.py  b2c3d4e5f6a7_embedding_layer.py
config/: config.toml  embedding.toml  ingestion.toml
docs/: project_concept.md
openspec/changes/archive/2026-06-28-phase-1-data-ingestion/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-28-phase-1-data-ingestion/specs/data-ingestion/: spec.md
openspec/changes/archive/2026-06-28-phase-1-data-ingestion/specs/database-schema/: spec.md
openspec/changes/archive/2026-06-29-centralize-config/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-29-phase-2-embedding-layer/: proposal.md  tasks.md
openspec/changes/archive/2026-06-29-refresh-embedding-pipeline-config-refs/: design.md  proposal.md  tasks.md
openspec/changes/phase-2-embedding-layer/: design.md
openspec/changes/phase-2-embedding-layer/specs/embedding-pipeline/: spec.md
openspec/changes/phase-2-embedding-layer/specs/tenant-isolation/: spec.md
openspec/specs/configuration/: spec.md
openspec/specs/data-ingestion/: spec.md
openspec/specs/database-schema/: spec.md
openspec/specs/embedding-pipeline/: spec.md
openspec/specs/tenant-isolation/: spec.md
src/appconfig/: models.py  settings.py
src/chunking/: config.py  config.toml  docling_chunker.py  factory.py  protocol.py
src/db/: __init__.py  models.py  upsert.py
src/embed/: config.py  config.toml  factory.py  in_memory.py  logger.py  openai_compatible.py  pipeline.py  protocol.py  seed.py
src/ingest/: config.py  logger.py  retry.py  run.py
src/ingest/fetchers/: players.py  stats.py  teams.py
tests/: test_appconfig.py  test_chunk_config.py  test_config.py  test_docling_chunker.py  test_embed_config.py  test_embedder.py  test_isolation.py  test_smoke.py
(+3 files in other folders)
