[project]
name = "nba-scout"
version = "0.1.0"
description = "High-Performance Multi-Tenant Hybrid-RAG Platform for NBA Personnel Analytics"
requires-python = ">=3.12"
dependencies = [
    "nba_api>=1.5",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    "loguru>=0.7",
    "python-dotenv>=1.0",
]

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingest", "src/db"]

[dependency-groups]
dev = ["ruff>=0.4", "pytest>=8.0"]

[tool.ruff]
line-length    = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["ingest", "db"]

[tool.pytest.ini_options]
testpaths = ["tests"]
